# dash-ml

./: CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml  release.yml
dashml/: __init__.py  config.py  drift.py  evaluation.py  experiment.py  governance.py  metrics.py  monitor.py  preprocessing.py  registry.py  retraining.py  serving.py  transforms.py  ui.py
docs/api/: dashml.html  index.html  search.js
marketplace/: listing.json  quickstart_notebook.py
tests/: test_dashml.py  test_drift.py  test_evaluation.py  test_evaluation_shap.py  test_experiment.py  test_governance.py  test_preprocessing.py  test_transforms.py
