[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-mlops"
dynamic = ["version"]
description = "ML model monitoring and management for Databricks — with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@gmail.com" }]
keywords = ["databricks", "ml-monitoring", "pyspark", "mlflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["ipywidgets>=8.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff"]

[project.urls]
Homepage = "https://github.com/dash-libs/dash-ml"

[tool.hatch.version]
path = "dashml/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dashml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
