[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-mlops"
dynamic = ["version"]
description = "ML lifecycle management for Databricks — preprocessing, evaluation, drift monitoring, governance, and champion/challenger promotion, with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@gmail.com" }]
keywords = ["databricks", "mlops", "ml-monitoring", "pyspark", "mlflow", "unity-catalog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["ipywidgets>=8.0", "numpy>=1.24", "pandas>=1.5", "scipy>=1.10", "pyyaml>=6.0"]

[project.optional-dependencies]
full = ["shap>=0.44", "matplotlib>=3.7", "mlflow>=2.9", "databricks-sdk>=0.20"]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff"]

[project.urls]
Homepage = "https://github.com/dash-libs/dash-ml"

[tool.hatch.version]
path = "dashml/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dashml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
